--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  # sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.1.0
   flutter: '>=3.3.0'
 
 dependencies:
